Commented one config map

--- a/deployments/templates/kyc.yaml
+++ b/deployments/templates/kyc.yaml
@@ -96,9 +96,9 @@ spec:
         - name: tz-{{ .Values.country }}
           hostPath:
             path: /usr/share/zoneinfo/{{ .Values.timzone }}
-        - name: vol-cm-main
-          configMap:
-            name: vol-cm-main
+#        - name: vol-cm-main
+#          configMap:
+#            name: vol-cm-main
         - name: vol-cm-kyc-main
           configMap:
             name: cm-kyc-main
